<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyPlaces</string>
    <string name="action_settings">Settings</string>
    <string name="carregando">Carregando...</string>
    <string name="mensagem_sem_conexao_internet">O dispositivo esta sem conexão com a internet.\n\nEste aplicativo será finalizado.</string>
    
	<!-- 	FOURSQUARE	 -->
	<string name="foursquare_nao_instalado">Para continuar o Foursquare deve ser instalado.</string>
	<string name="foursquare_conexao_cancelada">Conexão com o foursquare cancelada.</string>
	<string name="foursquare_conexao_negada">Conexão com o foursquare negada.</string>
	<string name="foursquare_desatualizado">Por favor, antes de continuar atualize o aplicativo Foursquare.</string>
	
	<!--	LOGIN	-->
	<string name="login_hint_logotipo">Logotipo tela login</string>
	<string name="login_hint_email">Informe seu e-mail de cadastro</string>
	<string name="login_hint_senha">Informe sua senha</string>
    <string name="login_label_entrar">Entrar</string>
    <string name="login_label_cadastro">Cadastre-se</string>
    <string name="login_label_rodape">Ao se cadastrar, você concorda com os termos de uso de serviço e Política de Privacidade.\n Todos os direitos reservados 2013 </string>
    <string name="login_mensagem_erro_atenticacao">Nome de usuário incorreto ou senha incorreta.</string>
    
    <!--	CADASTRO	-->
    <string name="cadastro_label_titulo">Criar conta no MyPlaces</string>
    <string name="cadastro_label_nome">Nome</string>
    <string name="cadastro_label_email">E-mail</string>
	<string name="cadastro_label_senha">Senha</string>
	<string name="cadastro_label_confirmar_senha">Confirmar Senha</string>
	<string name="cadastro_label_sexo">Sexo</string>
	<string name="cadastro_label_masculino">Masculino</string>
	<string name="cadastro_label_feminino">Feminino</string>
	<string name="cadastro_label_btn_criar">Criar conta</string>
	<string name="cadastro_label_btn_voltar">Voltar</string>
	<string name="cadastro_msg_senha_nao_confere">As senhas não conferem. Por favor, digite novamente.</string>
	<string name="cadastro_msg_realizado_sucesso">Cadastro realizado com sucesso.</string>
	
	<!--  ABAS -->
	<string name="title_myplaces">My Places</string>
	<!-- ABAS CHECKIN -->
	<string name="checkin_cadastro_local">Nome para o local</string>
	<string name="checkin_gasto_local">Valor gasto no lugar</string>
	<string name="checkin_button_fazer">Fazer checkin</string>
	<string name="checkin_button_cadastrar">Cadastrar novo local</string>
	<!-- FEED CHEKINS -->
	<string name="feedcheckin_title">Últimos check-ins</string>
	
	<!--  CHECKIN -->
	<string name="checkin_msg_valor_obritorio">O campo valor deve ser preenchido.</string>
	<string name="checkin_msg_nome_obritorio">O campo nome deve ser preenchido.</string>
	<string name="checkin_msg_categoria_obritorio">Favor selecionar uma categoria.</string>
	<string name="checkin_msg_selecionar_local">Selecione ou cadastre um local.</string>
	<string name="checkin_msg_sucesso">Check-in realizado com sucesso.</string>
	<string name="checkin_msg_falha">O Check-in não poude ser realizado.</string>
	<string name="checkin_seleccione_categoria">Selecione uma categoria.</string>
	<string name="checkin_lbl_voltar">Voltar</string>
	
	<!--  USUARIO -->
	<string name="user_busca_filtro_vazio">Por favor, informe uma palavra chave.</string>
	<string name="categorias">categorias</string>
	<string name="user_solicitar_amizade_falha">A solicitação de amizada já foi enviada.</string>
	<string name="user_solicitar_amizade_sucesso">Solicitação enviada com sucesso.</string>
	<string name="user_solicitar_aceitar_falha">O status da solicitação não poude ser alterado.</string>
	<string name="user_solicitar_aceitar_sucesso">Solicitação de amizade aceita com sucesso.</string>
	<string name="user_solicitar_recusar_falha">O status da solicitação não poude ser alterado.</string>
	<string name="user_solicitar_recusar_sucesso">Solicitação de amizade aceita com sucesso.</string>
	
	<!--  RELATORIO -->
	<string name="relatorio_dtinicial_vazia">Por favor, preencha a data inicial.</string>
	<string name="relatorio_dtfinal_vazia">Por favor, preencha a data final.</string>
	
	
	<!--  MENU -->
	<string name="menu_amigos">Meus amigos</string>
	<string name="menu_solicitacao_amigos">Solicitações de amizade</string>
	<string name="menu_timeline">Timeline</string>
	<string name="menu_logout">Logout</string>
	<string name="menu_sair">Sair</string>
	
</resources>
