<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/fndlogin">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" >
	    
	    <ImageView
	        android:id="@+id/id_logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        android:contentDescription="@string/login_hint_logotipo"
	        android:src="@drawable/logotipo" />
	
	    <TextView
	        style="@style/labelText"
	        android:id="@+id/label_email"
	        android:text="@string/login_hint_email" />
	
	    <EditText
	        android:id="@+id/txtEmail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:ems="10"
	        android:text="admin@myplaces.com"
	        android:inputType="textEmailAddress" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        style="@style/labelText"
	        android:id="@+id/label_senha"
	        android:text="@string/login_hint_senha" />
	
	    <EditText
	        android:id="@+id/txtSenha"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:ems="10"
	        android:text="123123123"
	        android:inputType="textPassword" />
	    
	    <Button
	        android:id="@+id/btnlogin"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/seletor_button_style1"
	        android:textColor="#fff"       
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:text="@string/login_label_entrar" />
	    
	    <Button
	        android:id="@+id/btncadastro"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"  
	        android:text="@string/login_label_cadastro" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="20dp"
	        android:gravity="center_horizontal"        
	        android:textColor="#fff"        
	        android:text="@string/login_label_rodape" />

		</LinearLayout>
</ScrollView>