<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_blue"
    android:gravity="center"
    android:layout_margin="30dip"
    android:orientation="vertical" >
    
    <TextView
	    android:id="@+id/line"
	    style="?android:attr/listSeparatorTextViewStyle"
	    android:paddingTop="5dip"
	    android:gravity="center_horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="1dp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_margin="8dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/bg_white"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btnListaAmigos"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_amigos"
                    android:background="@drawable/seletor_button_style1"
                    android:layout_margin="3dp"
                    android:padding="4dp" />

            </LinearLayout>
            
           	<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/bg_white"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btnListarSolicitacoes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_solicitacao_amigos"
                    android:background="@drawable/seletor_button_style1"
                    android:layout_margin="3dp"
                    android:padding="4dp" />

            </LinearLayout>
            
           	<LinearLayout
           	    android:id="@+id/lytTimeline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/bg_white"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btnTimeline"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_timeline"
                    android:background="@drawable/seletor_button_style1"
                    android:layout_margin="3dp"
                    android:padding="4dp" />

            </LinearLayout>
            
           	<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/bg_white"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_logout"
                    android:background="@drawable/seletor_button_style1"
                    android:layout_margin="3dp"
                    android:padding="4dp" />

            </LinearLayout>
            
           	<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/bg_white"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btnSair"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_sair"
                    android:background="@drawable/seletor_button_style1"
                    android:layout_margin="3dp"
                    android:padding="4dp" />

            </LinearLayout>
            
        </LinearLayout>

    </ScrollView>
</LinearLayout>