<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   <!-- HEADER -->
	<include
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        layout="@layout/header_menu" />
    <!-- HEADER -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E8E8E8"
                android:orientation="horizontal"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/checkin_cadastro_local" />

                    <EditText
                        android:id="@+id/txtNomeLocal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/checkin_gasto_local" />

                    <EditText
                        android:id="@+id/txtValorGasto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_margin="10dip"
                android:text="@string/checkin_button_fazer" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dip"
                android:text="@string/checkin_seleccione_categoria" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <ListView
                android:id="@+id/listCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="#fff"
                android:divider="#55BBFF"
                android:dividerHeight="2dip" >
            </ListView> 	
        </LinearLayout>

    </ScrollView>

    <!-- HEADER -->

</LinearLayout>